--- a/config.yml
+++ b/config.yml
@@ -5,11 +5,11 @@
 # etc.
 
 sql:
-    dbtype: sqlite   # either "sqlite" or "mysql"
+    dbtype:   # either "sqlite" or "mysql"
     host:     # if dbtype = mysql, provide host
     user:     # if dbtype = mysql, provide user
     passwd:   # if dbtype = mysql, provide password
-    dbname: test_db  # provide a name for the database.
+    dbname:   # provide a name for the database.
 
 # If you wish to save certain twitter user details, please indicate the SQL data
 # type you wish to save it as in the SQL database. If you do not wish to save
@@ -25,24 +25,24 @@ sql:
 
 twitter_user_details:
     contributors_enabled:
-    created_at: CHAR(30)
+    created_at:
     default_profile:
     default_profile_image:
     description:
-    entities.description.urls:
-    entities.url.urls:
+    entities_description_urls:
+    entities_url_urls:
     favourites_count:
     follow_request_sent:
-    followers_count: INT(30)
+    followers_count:
     following:
     friends_count:
     geo_enabled:
     has_extended_profile:
-    id: BIGINT PRIMARY KEY
+    id:
     id_str:
     is_translation_enabled:
     is_translator:
-    lang: CHAR(30)
+    lang:
     listed_count:
     location:
     name:
@@ -62,81 +62,81 @@ twitter_user_details:
     profile_use_background_image:
     protected:
     screen_name:
-    status.contributors:
-    status.coordinates:
-    status.coordinates.coordinates:
-    status.coordinates.type:
-    status.created_at:
-    status.entities.hashtags:
-    status.entities.media:
-    status.entities.symbols:
-    status.entities.urls:
-    status.entities.user_mentions:
-    status.extended_entities.media:
-    status.favorite_count:
-    status.favorited:
-    status.geo:
-    status.geo.coordinates:
-    status.geo.type:
-    status.id:
-    status.id_str:
-    status.in_reply_to_screen_name:
-    status.in_reply_to_status_id:
-    status.in_reply_to_status_id_str:
-    status.in_reply_to_user_id:
-    status.in_reply_to_user_id_str:
-    status.is_quote_status:
-    status.lang:
-    status.place:
-    status.place.bounding_box.coordinates:
-    status.place.bounding_box.type:
-    status.place.contained_within:
-    status.place.country:
-    status.place.country_code:
-    status.place.full_name:
-    status.place.id:
-    status.place.name:
-    status.place.place_type:
-    status.place.url:
-    status.possibly_sensitive:
-    status.quoted_status_id:
-    status.quoted_status_id_str:
-    status.retweet_count:
-    status.retweeted:
-    status.retweeted_status.contributors:
-    status.retweeted_status.coordinates:
-    status.retweeted_status.created_at:
-    status.retweeted_status.entities.hashtags:
-    status.retweeted_status.entities.media:
-    status.retweeted_status.entities.symbols:
-    status.retweeted_status.entities.urls:
-    status.retweeted_status.entities.user_mentions:
-    status.retweeted_status.extended_entities.media:
-    status.retweeted_status.favorite_count:
-    status.retweeted_status.favorited:
-    status.retweeted_status.geo:
-    status.retweeted_status.id:
-    status.retweeted_status.id_str:
-    status.retweeted_status.in_reply_to_screen_name:
-    status.retweeted_status.in_reply_to_status_id:
-    status.retweeted_status.in_reply_to_status_id_str:
-    status.retweeted_status.in_reply_to_user_id:
-    status.retweeted_status.in_reply_to_user_id_str:
-    status.retweeted_status.is_quote_status:
-    status.retweeted_status.lang:
-    status.retweeted_status.place:
-    status.retweeted_status.possibly_sensitive:
-    status.retweeted_status.quoted_status_id:
-    status.retweeted_status.quoted_status_id_str:
-    status.retweeted_status.retweet_count:
-    status.retweeted_status.retweeted:
-    status.retweeted_status.source:
-    status.retweeted_status.text:
-    status.retweeted_status.truncated:
-    status.source:
-    status.text:
-    status.truncated:
-    statuses_count: INT(30)
+    status_contributors:
+    status_coordinates:
+    status_coordinates_coordinates:
+    status_coordinates_type:
+    status_created_at:
+    status_entities_hashtags:
+    status_entities_media:
+    status_entities_symbols:
+    status_entities_urls:
+    status_entities_user_mentions:
+    status_extended_entities_media:
+    status_favorite_count:
+    status_favorited:
+    status_geo:
+    status_geo_coordinates:
+    status_geo_type:
+    status_id:
+    status_id_str:
+    status_in_reply_to_screen_name:
+    status_in_reply_to_status_id:
+    status_in_reply_to_status_id_str:
+    status_in_reply_to_user_id:
+    status_in_reply_to_user_id_str:
+    status_is_quote_status:
+    status_lang:
+    status_place:
+    status_place_bounding_box_coordinates:
+    status_place_bounding_box_type:
+    status_place_contained_within:
+    status_place_country:
+    status_place_country_code:
+    status_place_full_name:
+    status_place_id:
+    status_place_name:
+    status_place_place_type:
+    status_place_url:
+    status_possibly_sensitive:
+    status_quoted_status_id:
+    status_quoted_status_id_str:
+    status_retweet_count:
+    status_retweeted:
+    status_retweeted_status_contributors:
+    status_retweeted_status_coordinates:
+    status_retweeted_status_created_at:
+    status_retweeted_status_entities_hashtags:
+    status_retweeted_status_entities_media:
+    status_retweeted_status_entities_symbols:
+    status_retweeted_status_entities_urls:
+    status_retweeted_status_entities_user_mentions:
+    status_retweeted_status_extended_entities_media:
+    status_retweeted_status_favorite_count:
+    status_retweeted_status_favorited:
+    status_retweeted_status_geo:
+    status_retweeted_status_id:
+    status_retweeted_status_id_str:
+    status_retweeted_status_in_reply_to_screen_name:
+    status_retweeted_status_in_reply_to_status_id:
+    status_retweeted_status_in_reply_to_status_id_str:
+    status_retweeted_status_in_reply_to_user_id:
+    status_retweeted_status_in_reply_to_user_id_str:
+    status_retweeted_status_is_quote_status:
+    status_retweeted_status_lang:
+    status_retweeted_status_place:
+    status_retweeted_status_possibly_sensitive:
+    status_retweeted_status_quoted_status_id:
+    status_retweeted_status_quoted_status_id_str:
+    status_retweeted_status_retweet_count:
+    status_retweeted_status_retweeted:
+    status_retweeted_status_source:
+    status_retweeted_status_text:
+    status_retweeted_status_truncated:
+    status_source:
+    status_text:
+    status_truncated:
+    statuses_count:
     suspended:
     time_zone:
     translator_type:
