adjusting a dbh test so that it correctly compares two dfs instead of just the column names

--- a/config_template.yml
+++ b/config_template.yml
@@ -32,8 +32,8 @@ twitter_user_details:
     default_profile:  # TINYINT(1)
     default_profile_image:  # TINYINT(1)
     description:  # TEXT (contains a dict)
-    entities.description.urls:  # TEXT
-    entities.url.urls:  # TEXT (contains a dict)
+    entities_description_urls:  # TEXT
+    entities_url_urls:  # TEXT (contains a dict)
     favourites_count:  # BIGINT(30)
     follow_request_sent:  # TINYINT(1)
     followers_count:  # BIGINT(30)
@@ -65,80 +65,80 @@ twitter_user_details:
     profile_use_background_image:  # TINYINT(1)
     protected:  # TINYINT(1)
     screen_name:  # VARCHAR(50)
-    status.contributors:  # TEXT (Rarely available)
-    status.coordinates:  # TEXT (contains a dict)
-    status.coordinates.coordinates:  # TEXT (Rarely available)
-    status.coordinates.type:  # TEXT (Rarely available)
-    status.created_at:  # DATETIME
-    status.entities.hashtags:  # TEXT (contains a dict)
-    status.entities.media:  # TEXT (contains a dict)
-    status.entities.symbols:  # TEXT (contains a dict) # DE FACTO ALWAYS EMPTY
-    status.entities.urls:  # TEXT (contains a dict)
-    status.entities.user_mentions:  # TEXT (contains a dict)
-    status.extended_entities.media:  # TEXT (contains a dict)
-    status.favorite_count:  # INT(20)
-    status.favorited:  # TINYINT(1)
-    status.geo:  # TEXT (contains a dict)
-    status.geo.coordinates:  # TEXT (Rarely available)
-    status.geo.type:  # TEXT (Rarely available)
-    status.id:  # BIGINT(50)
-    status.id_str: # VARCHAR(50)
-    status.in_reply_to_screen_name:  # VARCHAR(50)
-    status.in_reply_to_status_id:  # BIGINT(50)
-    status.in_reply_to_status_id_str:  # VARCHAR(50)
-    status.in_reply_to_user_id:  # BIGINT(30)
-    status.in_reply_to_user_id_str:  # VARCHAR(30)
-    status.is_quote_status:  # TINYINT(1)
-    status.lang:  # VARCHAR(10)
-    status.place:  # TEXT (contains a dict)
-    status.place.bounding_box.coordinates: # TEXT (Rarely available)
-    status.place.bounding_box.type:  # TEXT (Rarely available)
-    status.place.contained_within:  # TEXT (Rarely available)
-    status.place.country:  # TEXT (Rarely available)
-    status.place.country_code:  # TEXT (Rarely available)
-    status.place.full_name:  # TEXT (Rarely available)
-    status.place.id:  # TEXT (Rarely available)
-    status.place.name: # TEXT (Rarely available)
-    status.place.place_type:  # TEXT (Rarely available)
-    status.place.url:  # TEXT (Rarely available)
-    status.possibly_sensitive:  # TINYINT(1)
-    status.quoted_status_id:  # BIGINT(50)
-    status.quoted_status_id_str:  # VARCHAR(50)
-    status.retweet_count:  # INT(30)
-    status.retweeted:  # TINYINT(1)
-    status.retweeted_status.contributors:  # TEXT (Rarely available)
-    status.retweeted_status.coordinates:  # TEXT (contains a dict)
-    status.retweeted_status.created_at:  # DATETIME
-    status.retweeted_status.entities.hashtags:  # TEXT (contains a dict)
-    status.retweeted_status.entities.media:  # TEXT (contains a dict)
-    status.retweeted_status.entities.symbols:  # TEXT (Rarely available)
-    status.retweeted_status.entities.urls:  # TEXT (contains a dict)
-    status.retweeted_status.entities.user_mentions:  # TEXT (contains a dict)
-    status.retweeted_status.extended_entities.media: # TEXT (contains a dict)
-    status.retweeted_status.favorite_count:  # INT(30)
-    status.retweeted_status.favorited:  # TINYINT(1)
-    status.retweeted_status.geo:  # TEXT (contains a dict)
-    status.retweeted_status.id:  # BIGINT(50)
-    status.retweeted_status.id_str:  # VARCHAR(50)
-    status.retweeted_status.in_reply_to_screen_name:  # VARCHAR(30)
-    status.retweeted_status.in_reply_to_status_id:  # BIGINT(50)
-    status.retweeted_status.in_reply_to_status_id_str:  # VARCHAR(50)
-    status.retweeted_status.in_reply_to_user_id:  # BIGINT(30)
-    status.retweeted_status.in_reply_to_user_id_str:  # VARCHAR(30)
-    status.retweeted_status.is_quote_status:  # TINYINT(1)
-    status.retweeted_status.lang:  # VARCHAR(10)
-    status.retweeted_status.place:  # TEXT (contains a dict)
-    status.retweeted_status.possibly_sensitive:  # TINYINT(1)
-    status.retweeted_status.quoted_status_id:  # BIGINT(50)
-    status.retweeted_status.quoted_status_id_str:  # VARCHAR(50)
-    status.retweeted_status.retweet_count:  # INT(30)
-    status.retweeted_status.retweeted:  # TINYINT(1)
-    status.retweeted_status.source:  # TEXT
-    status.retweeted_status.text:  # TEXT
-    status.retweeted_status.truncated:  # TINYINT(1)
-    status.source:  # TEXT
-    status.text:  # TEXT
-    status.truncated:  # TINYINT(1)
+    status_contributors:  # TEXT (Rarely available)
+    status_coordinates:  # TEXT (contains a dict)
+    status_coordinates_coordinates:  # TEXT (Rarely available)
+    status_coordinates_type:  # TEXT (Rarely available)
+    status_created_at:  # DATETIME
+    status_entities_hashtags:  # TEXT (contains a dict)
+    status_entities_media:  # TEXT (contains a dict)
+    status_entities_symbols:  # TEXT (contains a dict) # DE FACTO ALWAYS EMPTY
+    status_entities_urls:  # TEXT (contains a dict)
+    status_entities_user_mentions:  # TEXT (contains a dict)
+    status_extended_entities_media:  # TEXT (contains a dict)
+    status_favorite_count:  # INT(20)
+    status_favorited:  # TINYINT(1)
+    status_geo:  # TEXT (contains a dict)
+    status_geo_coordinates:  # TEXT (Rarely available)
+    status_geo_type:  # TEXT (Rarely available)
+    status_id:  # BIGINT(50)
+    status_id_str: # VARCHAR(50)
+    status_in_reply_to_screen_name:  # VARCHAR(50)
+    status_in_reply_to_status_id:  # BIGINT(50)
+    status_in_reply_to_status_id_str:  # VARCHAR(50)
+    status_in_reply_to_user_id:  # BIGINT(30)
+    status_in_reply_to_user_id_str:  # VARCHAR(30)
+    status_is_quote_status:  # TINYINT(1)
+    status_lang:  # VARCHAR(10)
+    status_place:  # TEXT (contains a dict)
+    status_place_bounding_box_coordinates: # TEXT (Rarely available)
+    status_place_bounding_box_type:  # TEXT (Rarely available)
+    status_place_contained_within:  # TEXT (Rarely available)
+    status_place_country:  # TEXT (Rarely available)
+    status_place_country_code:  # TEXT (Rarely available)
+    status_place_full_name:  # TEXT (Rarely available)
+    status_place_id:  # TEXT (Rarely available)
+    status_place_name: # TEXT (Rarely available)
+    status_place_place_type:  # TEXT (Rarely available)
+    status_place_url:  # TEXT (Rarely available)
+    status_possibly_sensitive:  # TINYINT(1)
+    status_quoted_status_id:  # BIGINT(50)
+    status_quoted_status_id_str:  # VARCHAR(50)
+    status_retweet_count:  # INT(30)
+    status_retweeted:  # TINYINT(1)
+    status_retweeted_status_contributors:  # TEXT (Rarely available)
+    status_retweeted_status_coordinates:  # TEXT (contains a dict)
+    status_retweeted_status_created_at:  # DATETIME
+    status_retweeted_status_entities_hashtags:  # TEXT (contains a dict)
+    status_retweeted_status_entities_media:  # TEXT (contains a dict)
+    status_retweeted_status_entities_symbols:  # TEXT (Rarely available)
+    status_retweeted_status_entities_urls:  # TEXT (contains a dict)
+    status_retweeted_status_entities_user_mentions:  # TEXT (contains a dict)
+    status_retweeted_status_extended_entities_media: # TEXT (contains a dict)
+    status_retweeted_status_favorite_count:  # INT(30)
+    status_retweeted_status_favorited:  # TINYINT(1)
+    status_retweeted_status_geo:  # TEXT (contains a dict)
+    status_retweeted_status_id:  # BIGINT(50)
+    status_retweeted_status_id_str:  # VARCHAR(50)
+    status_retweeted_status_in_reply_to_screen_name:  # VARCHAR(30)
+    status_retweeted_status_in_reply_to_status_id:  # BIGINT(50)
+    status_retweeted_status_in_reply_to_status_id_str:  # VARCHAR(50)
+    status_retweeted_status_in_reply_to_user_id:  # BIGINT(30)
+    status_retweeted_status_in_reply_to_user_id_str:  # VARCHAR(30)
+    status_retweeted_status_is_quote_status:  # TINYINT(1)
+    status_retweeted_status_lang:  # VARCHAR(10)
+    status_retweeted_status_place:  # TEXT (contains a dict)
+    status_retweeted_status_possibly_sensitive:  # TINYINT(1)
+    status_retweeted_status_quoted_status_id:  # BIGINT(50)
+    status_retweeted_status_quoted_status_id_str:  # VARCHAR(50)
+    status_retweeted_status_retweet_count:  # INT(30)
+    status_retweeted_status_retweeted:  # TINYINT(1)
+    status_retweeted_status_source:  # TEXT
+    status_retweeted_status_text:  # TEXT
+    status_retweeted_status_truncated:  # TINYINT(1)
+    status_source:  # TEXT
+    status_text:  # TEXT
+    status_truncated:  # TINYINT(1)
     statuses_count:  # BIGINT(30)
     suspended:  # TINYINT(1)
     time_zone: # TEXT (Rarely available)
